# backend/src/presentation/controllers/candidateController.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from 'express';
-import { addCandidate, findCandidateById } from '../../application/services/candidateService';
+import { addCandidate, findCandidateById, updateCandidateStage, NotFoundError } from '../../application/services/candidateService';
 
 export const addCandidateController = async (req: Request, res: Response) => {
     try {
@@ -27,6 +27,26 @@ export const getCandidateById = async (req: Request, res: Response) => {
         }
         res.json(candidate);
     } catch (error) {
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
+
+export const updateCandidateStageController = async (req: Request, res: Response) => {
+    try {
+        const candidateId = parseInt(req.params.id);
+        if (isNaN(candidateId)) {
+            return res.status(400).json({ error: 'Invalid ID format' });
+        }
+
+        const updated = await updateCandidateStage(candidateId, req.body);
+        res.status(200).json({ message: 'Candidate stage updated successfully', data: updated });
+    } catch (error: unknown) {
+        if (error instanceof NotFoundError) {
+            return res.status(404).json({ error: error.message });
+        }
+        if (error instanceof Error) {
+            return res.status(400).json({ message: 'Error updating candidate stage', error: error.message });
+        }
         res.status(500).json({ error: 'Internal Server Error' });
     }
 };
