# backend/src/presentation/controllers/positionController.ts
@@ -1,0 +1,19 @@
+import { Request, Response } from 'express';
+import { getCandidatesByPosition } from '../../application/services/positionService';
+
+export const getCandidatesByPositionController = async (req: Request, res: Response) => {
+    try {
+        const positionId = parseInt(req.params.id);
+        if (isNaN(positionId)) {
+            return res.status(400).json({ error: 'Invalid ID format' });
+        }
+
+        const candidates = await getCandidatesByPosition(positionId);
+        res.status(200).json(candidates);
+    } catch (error: unknown) {
+        if (error instanceof Error && error.message === 'Position not found') {
+            return res.status(404).json({ error: 'Position not found' });
+        }
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
